--- a/iCEBrainstorm.ioc
+++ b/iCEBrainstorm.ioc
@@ -3,18 +3,32 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F412RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP2=SPI2
+Mcu.IP3=SYS
+Mcu.IP4=USB_OTG_FS
+Mcu.IPNb=5
 Mcu.Name=STM32F412R(E-G)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=VP_SYS_VS_Systick
-Mcu.PinsNb=1
+Mcu.Pin0=PH0 - OSC_IN
+Mcu.Pin1=PH1 - OSC_OUT
+Mcu.Pin10=PA14
+Mcu.Pin11=PB3
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin2=PB12
+Mcu.Pin3=PB13
+Mcu.Pin4=PB14
+Mcu.Pin5=PB15
+Mcu.Pin6=PC9
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA13
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F412RETx
@@ -31,25 +45,103 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
+PA13.Locked=true
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Locked=true
+PA14.Signal=SYS_JTCK-SWCLK
+PB12.Locked=true
+PB12.Mode=NSS_Signal_Hard_Output
+PB12.Signal=SPI2_NSS
+PB13.Locked=true
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Locked=true
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
+PB3.Locked=true
+PB3.Signal=SYS_JTDO-SWO
+PC9.Mode=Clock-out-2
+PC9.Signal=RCC_MCO_2
+PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
+PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
+PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
+PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F412RETx
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.28.3
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=0
+ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=iCEBrainstorm.ioc
+ProjectManager.ProjectName=iCEBrainstorm
 ProjectManager.ProjectStructure=
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=EWARM V8.50
+ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
 RCC.CortexFreq_Value=16000000
+RCC.DFSDMAudioFreq_Value=150000000
 RCC.DFSDMFreq_Value=16000000
 RCC.FamilyName=M
-RCC.IPParameters=CortexFreq_Value,DFSDMFreq_Value,FamilyName,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLRCLKFreq_Value,RNGFreq_Value,SDIOFreq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.PLLCLKFreq_Value=96000000
-RCC.PLLI2SPCLKFreq_Value=96000000
-RCC.PLLI2SQCLKFreq_Value=96000000
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.PLLQCLKFreq_Value=96000000
-RCC.PLLRCLKFreq_Value=96000000
-RCC.RNGFreq_Value=96000000
-RCC.SDIOFreq_Value=96000000
-RCC.USBFreq_Value=96000000
-RCC.VCOI2SInputFreq_Value=1000000
-RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.HSE_VALUE=25000000
+RCC.I2S1Freq_Value=150000000
+RCC.I2S2Freq_Value=150000000
+RCC.IPParameters=CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,FamilyName,HSE_VALUE,I2S1Freq_Value,I2S2Freq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SQoutputFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRoutputFreq_Value,RNGFreq_Value,SDIOFreq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.PLLCLKFreq_Value=120000000
+RCC.PLLI2SPCLKFreq_Value=150000000
+RCC.PLLI2SQCLKFreq_Value=150000000
+RCC.PLLI2SQoutputFreq_Value=150000000
+RCC.PLLI2SRCLKFreq_Value=150000000
+RCC.PLLI2SoutputFreq_Value=150000000
+RCC.PLLM=15
+RCC.PLLN=144
+RCC.PLLQ=5
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQoutputFreq_Value=48000000
+RCC.PLLRCLKFreq_Value=120000000
+RCC.PLLRoutputFreq_Value=120000000
+RCC.RNGFreq_Value=48000000
+RCC.SDIOFreq_Value=48000000
+RCC.USBFreq_Value=48000000
+RCC.VCOI2SInputFreq_Value=1562500
+RCC.VCOI2SOutputFreq_Value=300000000
+RCC.VCOInputFreq_Value=1666666.6666666667
+RCC.VCOOutputFreq_Value=240000000
+SPI2.CalculateBaudRate=8.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
+SPI2.VirtualType=VM_MASTER
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
