--- a/iCEBrainstorm.ioc
+++ b/iCEBrainstorm.ioc
@@ -9,26 +9,30 @@ Mcu.CPN=STM32F412RET6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SPI2
-Mcu.IP3=SYS
-Mcu.IP4=USB_OTG_FS
-Mcu.IPNb=5
+Mcu.IP2=SPI1
+Mcu.IP3=SPI2
+Mcu.IP4=SYS
+Mcu.IP5=USB_OTG_FS
+Mcu.IPNb=6
 Mcu.Name=STM32F412R(E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin2=PB12
-Mcu.Pin3=PB13
-Mcu.Pin4=PB14
-Mcu.Pin5=PB15
-Mcu.Pin6=PC9
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin2=PA5
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PB12
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PC9
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F412RETx
@@ -53,6 +57,12 @@ PA13.Locked=true
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
 PB12.Locked=true
 PB12.Mode=NSS_Signal_Hard_Output
 PB12.Signal=SPI2_NSS
@@ -105,7 +115,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.CortexFreq_Value=16000000
 RCC.DFSDMAudioFreq_Value=150000000
 RCC.DFSDMFreq_Value=16000000
@@ -134,6 +144,11 @@ RCC.VCOI2SInputFreq_Value=1562500
 RCC.VCOI2SOutputFreq_Value=300000000
 RCC.VCOInputFreq_Value=1666666.6666666667
 RCC.VCOOutputFreq_Value=240000000
+SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 SPI2.CalculateBaudRate=8.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
